--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -195,6 +195,9 @@
                          <property name="horizontalScrollMode">
                           <enum>QAbstractItemView::ScrollPerPixel</enum>
                          </property>
+                         <property name="gridStyle">
+                          <enum>Qt::SolidLine</enum>
+                         </property>
                          <property name="rowCount">
                           <number>1</number>
                          </property>
@@ -349,6 +352,9 @@
                    <property name="columnCount">
                     <number>6</number>
                    </property>
+                   <attribute name="horizontalHeaderCascadingSectionResizes">
+                    <bool>true</bool>
+                   </attribute>
                    <attribute name="horizontalHeaderStretchLastSection">
                     <bool>true</bool>
                    </attribute>
@@ -946,6 +952,9 @@
                 <property name="columnCount">
                  <number>4</number>
                 </property>
+                <attribute name="horizontalHeaderCascadingSectionResizes">
+                 <bool>true</bool>
+                </attribute>
                 <attribute name="horizontalHeaderStretchLastSection">
                  <bool>true</bool>
                 </attribute>
